--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
-streamlit==1.36.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
-numpy>=1.24.0
-joblib>=1.2.0
-PyPDF2>=3.0.0
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-python-multipart>=0.0.6
+streamlit>=1.37.1
+transformers>=4.43.3
+torch>=2.6.0
+pdfplumber>=0.11.4
+nltk>=3.9.1
