--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,11 +1,21 @@
+[theme]
+primaryColor = "#0066cc"
+backgroundColor = "#ffffff"
+secondaryBackgroundColor = "#f0f2f6"
+textColor = "#262730"
+
 [server]
-headless = true
-port = 8501
 enableCORS = false
 enableXsrfProtection = false
 
-[theme]
-primaryColor = "#FF6B6B"
-backgroundColor = "#FFFFFF"
-secondaryBackgroundColor = "#F0F2F6"
-textColor = "#262730"
+[browser]
+gatherUsageStats = false
+
+[client]
+showErrorDetails = true
+
+[runner]
+magicEnabled = false
+
+[logger]
+level = "info"
