--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-streamlit>=1.37.1
-transformers>=4.43.3
-torch>=2.6.0
-pdfplumber>=0.11.4
-nltk>=3.9.1
+streamlit==1.37.0
+transformers>=4.40.0
+torch>=2.2.0
+pypdf>=4.2.0
+pdfminer.six>=20231228
+scikit-learn>=1.4.0
+numpy>=1.26.0
+pandas>=2.2.0
