--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,19 @@ docker-compose.override.yml
 models/*/checkpoint-*/
 models/test-model/
 
+# Exclude heavy model files from GitHub (will be downloaded during build)
+models/*/model.safetensors
+models/*/vocab.txt
+models/*/tokenizer.json
+models/*/tokenizer_config.json
+models/*/special_tokens_map.json
+models/*/config.json
+models/*/training_args.bin
+models/*/optimizer.pt
+models/*/scheduler.pt
+models/*/rng_state.pth
+models/*/trainer_state.json
+
 # Data files
 data/processed/
 data/*.csv
