--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,37 +1,18 @@
+[global]
+developmentMode = false
+
 [server]
-# Configurações do servidor para produção
-port = 7860
-address = "0.0.0.0"
 headless = true
+port = 8501
 enableCORS = false
 enableXsrfProtection = false
 
 [browser]
-# Configurações do navegador
 gatherUsageStats = false
-serverAddress = "0.0.0.0"
-serverPort = 7860
 
 [theme]
-# Tema personalizado
-primaryColor = "#1e40af"
+primaryColor = "#1f77b4"
 backgroundColor = "#ffffff"
-secondaryBackgroundColor = "#f8fafc"
-textColor = "#1e293b"
+secondaryBackgroundColor = "#f0f2f6"
+textColor = "#262730"
 font = "sans serif"
-
-[client]
-# Configurações do cliente
-showErrorDetails = false
-toolbarMode = "minimal"
-
-[runner]
-# Configurações do runner
-magicEnabled = false
-installTracer = false
-fixMatplotlib = true
-
-[logger]
-# Configurações de log
-level = "info"
-messageFormat = "%(asctime)s %(message)s"
