--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.37.0
-transformers>=4.40.0
-torch>=2.2.0
-pypdf>=4.2.0
-pdfminer.six>=20231228
-scikit-learn>=1.4.0
-numpy>=1.26.0
-pandas>=2.2.0
+streamlit>=1.28.0
+transformers>=4.35.0
+torch>=2.0.0
+pypdf>=3.15.0
+pdfminer.six>=20221105
+scikit-learn>=1.3.0
+numpy>=1.24.0
+pandas>=2.0.0
 deep-translator>=1.11.0
-requests>=2.31.0
+requests>=2.28.0
