🔧 Fix: Remove arquivos pesados do git e atualiza .gitignore
- Remove modelos pesados do tracking do git
- Atualiza .gitignore para excluir arquivos .safetensors, .bin, .pt, .pth
- Exclui diretórios com modelos pesados
- Prepara para deploy limpo sem arquivos pesados

--- a/.gitignore
+++ b/.gitignore
@@ -159,10 +159,21 @@ models/test-model/
 models/
 !models/.gitkeep
 
+# Exclude model directories with heavy files
+email-productivity-classifier/
+hub_ready_model/
+
 # Exclude temporary files and model packages
 temp_drive_upload/
 modelo_para_drive.zip
 *.zip
+
+# Exclude heavy model files
+*.safetensors
+*.bin
+*.pt
+*.pth
+*.joblib
 
 # Data files
 data/processed/
