--- a/hf_deploy/requirements.txt
+++ b/hf_deploy/requirements.txt
@@ -1,10 +1,14 @@
-streamlit>=1.28.0
-transformers>=4.35.0
-torch>=2.0.0
+streamlit>=1.38.0
+transformers>=4.42.0
+torch>=2.2.0
+tokenizers>=0.15.0
+huggingface_hub>=0.23.0
+requests>=2.31.0
+pandas>=2.2.0
+numpy>=1.26.0
+scikit-learn>=1.4.0
 pypdf>=3.15.0
 pdfminer.six>=20221105
-scikit-learn>=1.3.0
-numpy>=1.24.0
-pandas>=2.0.0
 deep-translator>=1.11.0
-requests>=2.28.0
+nltk>=3.8.0
+pdfplumber>=0.10.0
